--- a/webbase/index.html
+++ b/webbase/index.html
@@ -44,9 +44,6 @@
 				<li><a href="index.html" class="active">home</a></li>
 				<li><a href="downloads.html">downloads</a></li>
 				<li><a href="reports.html">reports</a></li>
-				<li><a href="about.html">about</a></li>
-				<li><a href="faq.html">faq</a></li>
-				<li><a href="contact.html">contact me</a></li>
 			</ul>
 		</div>
 		
@@ -59,7 +56,35 @@
 			<div id="columnA_columnless">
 				<h3>About</h3>
 				<p>
-					Openstreetmap is a rich datasource for administrative boundary data. On this site you can download OSM derived Data as Shapefiles.
+                                On these pages you can <a href="downloads.html">download</a> OSM derived Data as Shapefiles. </br>
+                                In the <a href="reports.html">reports</a> section you find some reports about boundary data in OSM </br></br>
+                                This site is inspired by <a href="http://gadm.org">gadm.org</a>, <a href="http://nominatim.openstreetmap.org/polygons?class=boundary">Nominatim borken polygon report</a>
+                                and <a href="http://openstreetmapdata.com/">OpenStreetMap Data</a></br>
+                                You can find full source code to generate these reports on <a href="https://github.com/bussed/osmgadm">github</a>
+				</p>
+				<br class="clear" />
+			</div>
+		</div>
+		<br class="clear" />
+			<div id="columnA_columnless">
+				<h3>faq</h3>
+				<p>
+					My country/state/whatever does not show up in the reports </br>
+
+					This can have many reasons:
+                                        <li>my code is buggy</li>
+                                        <li>Data is from 08 May 2012. Perhaps now it would show up.</li>
+                                        <li>Your country/state/whatever or some of its parent polygons dont form a closed geometry</li>
+                                        <li>esoteric tagging is used that my code does not understand</li>
+				</p>
+				<br class="clear" />
+			</div>
+		<br class="clear" />
+			<div id="columnA_columnless">
+				<h3>Contact</h3>
+				<p>
+                                    Contact user <a href="http://www.openstreetmap.org/user/dbusse">dbusse</a> on OSM.
+                                    I really would like to get some feedback.
 				</p>
 				<br class="clear" />
 			</div>
@@ -69,7 +94,7 @@
 </div>
 
 <div id="footer" class="fluid">
-	Copyright &copy; 2006 Your Website. All rights reserved. Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>.
+	All data Copyright &copy; 2012 OpenStreetMap Contributors (<a href="http://www.openstreetmap.org/copyright">License</a>)
 </div>
 
 </body>
